# building-startup-analytics

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/building_startup_analytics/1_data_infrastructure/: 1_analytical_database.ipynb
_sources/building_startup_analytics/2_product_dashboard/: 2_product_dashboard.ipynb
_sources/building_startup_analytics/5_metric_forecasting/: 5_metric_forecasting.ipynb
assets/: plotly_config.py  sql_config.py  utils_for_dags.py
building_startup_analytics/1_data_infrastructure/: .env  1_analytical_database.html  analytical_database.ipynb  analytics_daily_etl_queries.py  dag_analytics_daily_etl.py
building_startup_analytics/2_product_dashboard/: 2_product_dashboard.html  dashboard_mockup.drawio  datalens_dashboard.json  product_dashboard.ipynb
building_startup_analytics/3_metric_deep_dive/: 3_metric_deep_dive.html  3_metric_deep_dive.ipynb  metric_deep_dive.ipynb
building_startup_analytics/4_ab_testing/: 4_ab_testing.html  4_ab_testing.ipynb  ab_testing.ipynb
building_startup_analytics/5_metric_forecasting/: 5_metric_forecasting.html  metric_forecasting.ipynb
building_startup_analytics/6_automated_reporting/: 6_automated_reporting.html  6_automated_reporting.ipynb  app_daily_report_queries.py  automated_reporting.ipynb  dag_app_daily_report.py
building_startup_analytics/7_anomaly_detection/: 7_alert_system.html  7_alert_system.ipynb  alert_system.ipynb  dag_alert_system.py
docs/source/: conf.py  index.ipynb
(+1 files in other folders)
